# ugv_sdk

./: .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  package.xml
.github/workflows/: ros-ci.yml  standalone-ci.yml
cmake/: ugv_sdkConfig.cmake.in
demo/bunker_demo/: CMakeLists.txt  bunker_robot_demo.cpp
demo/hunter_demo/: CMakeLists.txt  hunter_robot_demo.cpp
demo/ranger_demo/: CMakeLists.txt  ranger_robot_demo.cpp
demo/scout_demo/: CMakeLists.txt  scout_mini_omni_demo.cpp  scout_robot_demo.cpp
demo/tracer_demo/: CMakeLists.txt  tracer_robot_demo.cpp
demo/utils_demo/: CMakeLists.txt  demo_protocol_detector.cpp
include/ugv_sdk/details/async_port/: async_can.hpp  async_port_base.hpp  async_serial.hpp  ring_buffer.hpp
include/ugv_sdk/details/interface/: agilex_message.h  agilex_types.h  bunker_interface.hpp  hunter_interface.hpp  parser_interface.hpp  ranger_interface.hpp  robot_common_interface.hpp  scout_interface.hpp  tracer_interface.hpp
include/ugv_sdk/details/protocol_v1/: agilex_msg_parser_v1.h  protocol_v1_parser.hpp  robot_limits.hpp
include/ugv_sdk/details/protocol_v2/: protocol_v2_parser.hpp
include/ugv_sdk/details/robot_base/: agilex_base.hpp  bunker_base.hpp  hunter_base.hpp  ranger_base.hpp  scout_base.hpp  tracer_base.hpp
include/ugv_sdk/mobile_robot/: bunker_robot.hpp  hunter_robot.hpp  ranger_robot.hpp  scout_robot.hpp  tracer_robot.hpp
include/ugv_sdk/utilities/: protocol_detector.hpp  stopwatch.hpp
sample/: CMakeLists.txt  tracer_demo.cpp
scripts/: bringup_can2usb_1m.bash
src/async_port/: async_can.cpp  async_serial.cpp
src/mobile_robot/: bunker_robot.cpp  hunter_robot.cpp  ranger_robot.cpp  scout_robot.cpp
src/protocol_v1/: agilex_msg_parser_v1.c  agilex_protocol_v1.h
src/protocol_v2/: agilex_msg_parser_v2.c  agilex_msg_parser_v2.h  agilex_protocol_v2.h  protocol_v2_parser.cpp
src/utilities/: protocol_detector.cpp
test/: CMakeLists.txt
test/unit_tests/: utest_hunter_v1_command.cpp  utest_scout_v1_command.cpp
